/*
 * Mantle - NeoForge 1.21.1 port build file
 * Original ForgeGradle build by Sunstrike, ProgWML6 (Slime Knights).
 * Converted to ModDevGradle for NeoForge 1.21.1.
 */

plugins {
    id 'idea'
    id 'eclipse'
    id 'maven-publish'
    id 'net.neoforged.moddev' version '2.0.141'
    id 'io.freefair.lombok' version '8.10'
}

group = 'slimeknights.mantle'
version = "${minecraft_version}-${mod_version}"
base {
    archivesName = 'Mantle'
}

java {
    toolchain.languageVersion = JavaLanguageVersion.of(21)
    withSourcesJar()
}

println "Java: ${System.getProperty 'java.version'}, JVM: ${System.getProperty 'java.vm.version'} (${System.getProperty 'java.vendor'}), Arch: ${System.getProperty 'os.arch'}, Version: ${version}"

repositories {
    mavenCentral()
    maven {
        name = 'BlameJared (JEI, CraftTweaker, etc.)'
        url = 'https://maven.blamejared.com/'
    }
}

neoForge {
    version = neoforge_version

    parchment {
        minecraftVersion = parchment_minecraft
        mappingsVersion = parchment_version
    }

    // Mantle widens access to a few vanilla members.
    accessTransformers.from('src/main/resources/META-INF/accesstransformer.cfg')

    runs {
        configureEach {
            gameDirectory = project.file('run')
            logLevel = org.slf4j.event.Level.DEBUG
        }
        client {
            client()
        }
        server {
            server()
            programArgument '--nogui'
        }
        data {
            data()
            programArguments.addAll(
                '--mod', 'mantle',
                '--all',
                '--output', file('src/generated/resources/').absolutePath,
                '--existing', file('src/main/resources/').absolutePath
            )
        }
    }

    mods {
        mantle {
            sourceSet sourceSets.main
        }
    }
}

// Generated datagen output is packed into the jar.
sourceSets.main.resources {
    srcDir 'src/generated/resources'
    exclude '.cache'
}

dependencies {
    // JEI integration lives in slimeknights.mantle.plugin; enable once that package is ported.
    // compileOnly "mezz.jei:jei-${minecraft_version}-neoforge-api:${jei_version}"
    // runtimeOnly "mezz.jei:jei-${minecraft_version}-neoforge:${jei_version}"
}

tasks.named('processResources', ProcessResources).configure {
    var replaceProperties = [
        version        : version,
        loader_range   : loader_range,
        minecraft_range: minecraft_range,
        neoforge_range : neoforge_range
    ]
    inputs.properties replaceProperties

    filesMatching(['META-INF/neoforge.mods.toml', 'pack.mcmeta']) {
        expand replaceProperties
    }
}

tasks.named('jar', Jar).configure {
    manifest {
        attributes([
                "Specification-Title"     : "Mantle",
                "Specification-Vendor"    : "Slime Knights",
                "Specification-Version"   : "1",
                "Implementation-Title"    : project.name,
                "Implementation-Version"  : "${version}",
                "Implementation-Vendor"   : "Slime Knights"
        ])
    }
}

sourcesJar {
    exclude 'assets/**'
    exclude 'data/**'
    exclude 'pack.png'
    exclude 'pack.mcmeta'
    exclude 'META-INF/neoforge.mods.toml'
}

publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
        }
    }
    repositories {
        if (project.hasProperty('DEPLOY_DIR')) {
            maven { url DEPLOY_DIR }
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}
